RESOLVED FIXED117224
Cannot set a new timer inside of timer callback in RunLoopTimerGtk & RunLoopTimerEFL
https://bugs.webkit.org/show_bug.cgi?id=117224
Summary Cannot set a new timer inside of timer callback in RunLoopTimerGtk & RunLoopT...
Gwang Yoon Hwang
Reported 2013-06-04 22:59:07 PDT
RunLoopTimer should clear its isActive flag before invoking timer callback.
Attachments
Patch (2.50 KB, patch)
2013-06-06 03:43 PDT, Gwang Yoon Hwang
no flags
Gwang Yoon Hwang
Comment 1 2013-06-06 03:43:37 PDT
Martin Robinson
Comment 2 2013-06-06 03:49:36 PDT
Comment on attachment 203919 [details] Patch The GTK bits look good to me. Have you ensured all tests are passing as well?
Chris Dumez
Comment 3 2013-06-06 03:51:24 PDT
Comment on attachment 203919 [details] Patch Looks sane. r=me.
Chris Dumez
Comment 4 2013-06-06 03:52:40 PDT
Sorry, didn't see Martin's comment. Leaving cq? on.
Gwang Yoon Hwang
Comment 5 2013-06-06 06:27:51 PDT
(In reply to comment #2) > (From update of attachment 203919 [details]) > The GTK bits look good to me. Have you ensured all tests are passing as well? Yes, all tests passed.
Gwang Yoon Hwang
Comment 6 2013-06-06 06:29:40 PDT
(In reply to comment #4) > Sorry, didn't see Martin's comment. Leaving cq? on. Thanks for review. All tests are passed. Could you turn cq+?
WebKit Commit Bot
Comment 7 2013-06-06 06:52:47 PDT
Comment on attachment 203919 [details] Patch Clearing flags on attachment: 203919 Committed r151268: <http://trac.webkit.org/changeset/151268>
WebKit Commit Bot
Comment 8 2013-06-06 06:52:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.