Cannot set a new timer inside of timer callback in RunLoopTimerGtk & RunLoopTimerEFL https://bugs.webkit.org/show_bug.cgi?id=117224

Patch by Gwang Yoon Hwang <ryumiel@company100.net> on 2013-06-06
Reviewed by Christophe Dumez.

RunLoopTimer should clear its isActive flag before invoking timer
callback.

* platform/efl/RunLoopEfl.cpp:
(WebCore::RunLoop::TimerBase::timerFired):
* platform/gtk/RunLoopGtk.cpp:
(WebCore::RunLoop::TimerBase::timerFiredCallback):

Canonical link: https://commits.webkit.org/135541@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151268 268f45cc-cd09-0410-ab3c-d52691b4dbfc